# SwordEngine

./: .gitignore  CMakeLists.txt
example/: helloworld.c
include/sword/: assets.h  def.h  entity.h  math.h  platform.h  render.h  sword.h
src/: context.c  context.h  def.h  entity.c  math.h  platform.c  platform.h  render.c  render.h
